--- a/hector_elevation_mapping/src/CMakeLists.txt
+++ b/hector_elevation_mapping/src/CMakeLists.txt
@@ -6,6 +6,7 @@
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 
-rosbuild_add_executable(ElevationMappingNode hector_elevation_mapping_node.cpp)
-
-rosbuild_add_library(ElevationMapping hector_elevation_mapping.h hector_elevation_mapping.cpp)
+include_directories(${catkin_INCLUDE_DIRS})
+add_executable(ElevationMappingNode hector_elevation_mapping_node.cpp)
+target_link_libraries(ElevationMappingNode ${catkin_LIBRARIES})
+add_library(ElevationMapping hector_elevation_mapping.h hector_elevation_mapping.cpp)
