--- a/hector_exploration_planner/CMakeLists.txt
+++ b/hector_exploration_planner/CMakeLists.txt
@@ -1,5 +1,17 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+# Catkin User Guide: http://www.ros.org/doc/groovy/api/catkin/html/user_guide/user_guide.html
+# Catkin CMake Standard: http://www.ros.org/doc/groovy/api/catkin/html/user_guide/standards.html
+cmake_minimum_required(VERSION 2.8.3)
+project(hector_exploration_planner)
+# Load catkin and all dependencies required for this package
+# TODO: remove all from COMPONENTS that are not catkin packages.
+find_package(catkin REQUIRED COMPONENTS roscpp rospy dynamic_reconfigure geometry_msgs costmap_2d nav_core pluginlib nav_msgs rosconsole hector_nav_msgs cmake_modules)
+
+# include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
+# CATKIN_MIGRATION: removed during catkin migration
+# cmake_minimum_required(VERSION 2.4.6)
+
+# CATKIN_MIGRATION: removed during catkin migration
+# include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 # Set the build type.  Options are:
 #  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
@@ -11,7 +23,9 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 set(ROS_BUILD_TYPE RelWithDebInfo)
 
 
-rosbuild_init()
+
+# CATKIN_MIGRATION: removed during catkin migration
+# rosbuild_init()
 
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -20,21 +34,42 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 find_package(cmake_modules)
 find_package(Eigen REQUIRED)
-include_directories(${Eigen_INCLUDE_DIRS})
+include_directories(${Eigen_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} cfg/cpp include)
 
 #add dynamic reconfigure api
-rosbuild_find_ros_package(dynamic_reconfigure)
-include(${dynamic_reconfigure_PACKAGE_PATH}/cmake/cfgbuild.cmake)
-gencfg()
+#rosbuild_find_ros_package(dynamic_reconfigure)
+#include(${dynamic_reconfigure_PACKAGE_PATH}/cmake/cfgbuild.cmake)
+#gencfg()
 
 #uncomment if you have defined messages
-#rosbuild_genmsg()
+#add_message_files(
+  #FILES
+  # TODO: List your msg files here
+#)
 #uncomment if you have defined services
-#rosbuild_gensrv()
+#add_service_files(
+  #FILES
+  # TODO: List your msg files here
+#)
 
-rosbuild_add_library(${PROJECT_NAME} src/hector_exploration_planner.cpp)
+generate_dynamic_reconfigure_options(
+  cfg/ExplorationPlanner.cfg
+)
 
-rosbuild_add_library(hector_exploration_base_global_planner_plugin src/hector_exploration_base_global_planner_plugin.cpp)
+add_library(${PROJECT_NAME} src/hector_exploration_planner.cpp)
+add_library(hector_exploration_base_global_planner_plugin src/hector_exploration_base_global_planner_plugin.cpp)
 target_link_libraries(hector_exploration_base_global_planner_plugin ${PROJECT_NAME})
+#add_executable(hector_exploration_test src/hector_exploration_test.cpp)
+## Generate added messages and services with any dependencies listed here
+#generate_messages(
+    #TODO DEPENDENCIES geometry_msgs std_msgs
+#)
 
-#rosbuild_add_executable(hector_exploration_test src/hector_exploration_test.cpp)
+# catkin_package parameters: http://ros.org/doc/groovy/api/catkin/html/dev_guide/generated_cmake_api.html#catkin-package
+# TODO: fill in what other packages will need to use this package
+catkin_package(
+    DEPENDS roscpp rospy dynamic_reconfigure geometry_msgs costmap_2d nav_core pluginlib nav_msgs rosconsole hector_nav_msgs cmake_modules
+    CATKIN_DEPENDS # TODO
+    INCLUDE_DIRS include # TODO include
+    LIBRARIES # TODO
+)
